Add support for fastify schemas to validate query and path params in player routes
